save my first notebook

--- a/myFirstNoteBook.ipynb
+++ b/myFirstNoteBook.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6a5718cd-fdd9-46a2-848c-3101ad3c4b74",
+   "id": "1388a6a1-c982-40a6-8ef3-b75f921bfe31",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "91"
+       "3"
       ]
      },
      "execution_count": 6,
@@ -18,78 +18,183 @@
     }
    ],
    "source": [
-    "1+90"
+    "2+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "96bf30b7-f673-4a25-91cf-ba02507963bc",
+   "execution_count": 7,
+   "id": "7019fbcf-4b4e-478b-a5e5-dfbe0cf1828c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5*4\n"
+    "2*2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2cabfd68-256f-4a38-af5e-99258f557050",
+   "execution_count": 8,
+   "id": "09a64eb5-6526-427d-9d2f-29153feb2a03",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1.75"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Hello\")"
+    "7/4\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "038ab472-31a0-40ad-bb9c-5fe5d48ce6ce",
+   "execution_count": 9,
+   "id": "8e00fd9a-91ca-4fba-a051-c7d1e01409d6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"new\")"
+    "7 % 4"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "051f3dca-569d-47f0-9195-9d7f7e21f952",
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "faea38a2-29dc-4e72-9d46-709dd4543c64",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Hey this is text for notes"
+    "23 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "657b8ff5-ec73-4878-8ec2-d334843c6db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c4d8289c-93f3-4db2-bfcd-af0cab4312e4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "93a91307-dfb0-4886-a384-c77e074008a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "105"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 + 10 * 10 + 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a29f8707-8252-4382-8aa6-870b19fe07c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "156"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(2 + 10) * (10 + 3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1388a6a1-c982-40a6-8ef3-b75f921bfe31",
+   "id": "a12a2f62-d3ce-49fb-b558-77b087848c27",
    "metadata": {},
    "outputs": [],
    "source": []
