--- a/00Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
+++ b/00Python Object and Data Structure Basics/03-Print Formatting with Strings.ipynb
@@ -687,6 +687,32 @@
    "source": [
     "That is the basics of string formatting!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print Formatting FAQs\n",
+    "Print Formatting FAQS\n",
+    "\n",
+    "1.) I imported print from the __future__ module, now print isn't working. What happened?\n",
+    "\n",
+    "This is because once you import from the __future__ module in Python 2.7, a print statement will no longer work, and print must then use a print() function. Meaning that you must use\n",
+    "\n",
+    "print('Whatever you were going to print')\n",
+    "\n",
+    "or if you are using some formatting:\n",
+    "\n",
+    "print('This is a string with an {p}'.format(p='insert'))\n",
+    "\n",
+    "The __future__ module allows you to use Python3 functionality in a Python2 environment, but some functionality is overwritten (such as the print statement, or classic division when you import division).\n",
+    "\n",
+    "Since we are using Jupyter Notebooks, once you so the import, all cells will require the use if the print() function. You will have to restart Python or start a new notebook to regain the old functionality back.\n",
+    "\n",
+    "HERE IS AN AWESOME SOURCE FOR PRINT FORMATTING:\n",
+    "\n",
+    "https://pyformat.info/"
+   ]
   }
  ],
  "metadata": {
