--- a/00Python Object and Data Structure Basics/08-Files.ipynb
+++ b/00Python Object and Data Structure Basics/08-Files.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -261,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, this is a quick test file.\\nThis is adding a new line\\n'"
+       "'First Line\\nSecond LineFirst Line\\nSecond LineFirst Line\\nSecond LineFirst Line\\nSecond LineFirst Line\\nSecond LineFirst Line\\nSecond LineFirst Line\\nSecond LineFirst Line\\nSecond Line\\n\\n'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "''"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,11 +354,118 @@
     "# Write and Read (‘w+’)\n",
     "# Append Only (‘a’)\n",
     "# Append and Read (‘a+’)\n",
-    "                 \n",
     "with open('test.txt', mode = 'w+') as myfile:\n",
     "    contents = myfile.read()\n",
     "\n",
     "contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting my_new_file.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile my_new_file.txt\n",
+    "One on first\n",
+    "two on second\n",
+    "three on third"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One on first\n",
+      "two on second\n",
+      "three on third\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('my_new_file.txt', mode='r') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One on first\n",
+      "two on second\n",
+      "three on third\n",
+      "\n",
+      "four on fourth\n",
+      "four on fourth\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('my_new_file.txt', mode='a') as f:\n",
+    "    f.write('\\nfour on fourth')\n",
+    "\n",
+    "with open('my_new_file.txt', mode='r') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I created this file\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('wetrergkjrfnkj.txt', mode='w') as f:\n",
+    "    f.write('I created this file')\n",
+    "\n",
+    "with open('wetrergkjrfnkj.txt', mode='r') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test.txt', mode='w') as f:\n",
+    "    f.write('Hello World')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = open('test.txt', mode='w')\n",
+    "x.write('Hello World')\n",
+    "x.close()"
    ]
   },
   {
@@ -611,6 +718,35 @@
    "metadata": {},
    "source": [
     "We'll learn a lot more about this later, but up next: Sets and Booleans!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resources for More Basic Practice\n",
+    "\n",
+    "Before you begin your assessment, I wanted to point out some helpful links for practice (don't worry about being able to do these exercises, I just want you to be aware of the links so you can visit them later, since we still haven't discussed functions, you won't be able to utilize a lot of these resources yet!):\n",
+    "\n",
+    "Basic Practice:\n",
+    "\n",
+    "http://codingbat.com/python\n",
+    "\n",
+    "More Mathematical (and Harder) Practice:\n",
+    "\n",
+    "https://projecteuler.net/archives\n",
+    "\n",
+    "List of Practice Problems:\n",
+    "\n",
+    "http://www.codeabbey.com/index/task_list\n",
+    "\n",
+    "A SubReddit Devoted to Daily Practice Problems:\n",
+    "\n",
+    "https://www.reddit.com/r/dailyprogrammer\n",
+    "\n",
+    "A very tricky website with very few hints and touch problems (Not for beginners but still interesting)\n",
+    "\n",
+    "http://www.pythonchallenge.com/"
    ]
   }
  ],
