--- a/02-Python Statements/05-Useful-Operators.ipynb
+++ b/02-Python Statements/05-Useful-Operators.ipynb
@@ -586,29 +586,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter Something into this box: great job!\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'great job!'"
+       "'hi'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input('Enter Something into this box: ')"
+    "input('Enter Something into this box!!!!!!!: ')"
    ]
   }
  ],
@@ -628,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
