Use range() to print all the even numbers from 0 to 10.

--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "st = 'Print only the words that start with s in this sentence'"
+    "st = 'Print only the words that start with s in this sentence Sam'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,8 @@
      "text": [
       "start\n",
       "s\n",
-      "sentence\n"
+      "sentence\n",
+      "Sam\n"
      ]
     }
    ],
@@ -55,7 +56,7 @@
     "# print(st)\n",
     "\n",
     "for word in st:\n",
-    "    if word[0] == \"s\":\n",
+    "    if word[0].lower() == \"s\":\n",
     "        print(word)"
    ]
   },
@@ -69,13 +70,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code Here"
+    "#Code Here\n",
+    "for num in range(0,11):\n",
+    "    if num % 2 == 0:\n",
+    "        print(num)\n"
    ]
   },
   {
