--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -326,13 +326,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']\n",
+      "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "st = 'Create a list of the first letters of every word in this string'\n",
+    "st = st.split()\n",
+    "myList = []\n",
+    "\n",
+    "for word in st:\n",
+    "    myList.append(word[0])\n",
+    "print(myList) \n",
+    "\n",
+    "# or \n",
+    "st = 'Create a list of the first letters of every word in this string'\n",
+    "print([word[0] for word in st.split()])\n",
+    "\n"
    ]
   },
   {
