--- a/03-Methods and Functions/02-Functions.ipynb
+++ b/03-Methods and Functions/02-Functions.ipynb
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def say_hello():\n",
-    "    print('hello')"
+    "def say_hello(name = 'Default'):\n",
+    "    print(f'Hello {name}')"
    ]
   },
   {
@@ -123,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "hello Default\n"
      ]
     }
    ],
@@ -1362,7 +1362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
