--- a/03-Methods and Functions/02-Functions.ipynb
+++ b/03-Methods and Functions/02-Functions.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "<function __main__.say_hello()>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "9"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "'onetwo'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "15"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "40"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "80"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "False"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "False"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "False"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "True"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "False"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "[2, 4, 6]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "[]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1045,19 +1045,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "work_hours = [('Abby',100),('Billy',400),('Cassie',800)]\n"
    ]
@@ -1071,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -1099,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1108,13 +1100,18 @@
        "('Cassie', 800)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "employee_check(work_hours)"
+    "employee_check(work_hours)\n",
+    "\n",
+    "# name,hours = employee_check(work_hours)\n",
+    "\n",
+    "# name\n",
+    "# hours"
    ]
   },
   {
@@ -1135,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -1146,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
@@ -1157,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -1169,16 +1166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 1, 4, 5, 2]"
+       "[4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -1207,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -1222,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1228,7 @@
        "[' ', 'O', ' ']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,16 +1239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[' ', ' ', 'O']"
+       "['O', ' ', ' ']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -1282,23 +1279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pick a number: 0, 1, or 2:  1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
@@ -1339,16 +1329,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pick a number: 0, 1, or 2:  1\n",
       "Wrong! Better luck next time\n",
-      "[' ', ' ', 'O']\n"
+      "[' ', 'O', ' ']\n"
      ]
     }
    ],
@@ -1375,6 +1364,11 @@
    "source": [
     "Great! You should now have a basic understanding of creating your own functions to save yourself from repeatedly writing code!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
